--- a/conteudos/style.css
+++ b/conteudos/style.css
@@ -1,13 +1,22 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root {
+    --fonte01: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte02: 'Passion One', cursive;
+    --fonte03: 'Sriracha', cursive;
+}
 
 * {
     margin: 0;
     padding: 0;
+    font-size: 1em;
 }
 
 html, body {
     background-color: darkgray;
     min-height: 100vh;
+    font-family: var(--fonte01);
 }
 
 header {
@@ -18,6 +27,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte02);
+    font-size: 7vw;
 }
 header > p {
     padding-bottom: 30px;
@@ -51,6 +62,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte03);
+    font-size: 2em;
 }
 
 .imagem > p {
